# bili_ticket_rush

backend/src/: api.rs  taskmanager.rs
common/: Cargo.toml
common/src/: cookie_manager.rs  gen_cp.rs  taskmanager.rs  ticket.rs
frontend/src/: app.rs
frontend/src/ui/tabs/: home.rs
